--- a/frontend/web/templates/login.html
+++ b/frontend/web/templates/login.html
@@ -64,8 +64,16 @@
                     </div>
                 </div>
                 
-                <fluent-button appearance="accent" class="w-100" type="submit">Ingresar</fluent-button>
+                <fluent-button appearance="accent" class="w-100" type="submit" id="btnLogin">Ingresar</fluent-button>
             </form>
+            <script>
+                document.getElementById("password").addEventListener("keypress", function(event) {
+                    if (event.key === "Enter") {
+                        event.preventDefault();
+                        document.getElementById("btnLogin").form.submit();
+                    }
+                });
+            </script>
         </fluent-card>
     </div>
 
